Add chat communication and alerts when user connect or leave the chat. Submodule: 28.3

--- a/client/style.css
+++ b/client/style.css
@@ -103,6 +103,9 @@ p {
 .message--self .message__content {
   background: #3498db;
 }
+.announcement {
+  background-color: orange;
+}
 
 .show {
   display: block;
